# finki

./: README.md
Algoritmi_I_Podatocni_Strukturi/ExtraVtorKolokvium/: KumanovskiDijalekt.java  MostFrequentSubstring.java  Radar.java  Speluvanje.java
Algoritmi_I_Podatocni_Strukturi/PrvKolokvium/: ArithmeticExpression.java  Bus.java  Cards.java  CountingBits.java  (+22 more)
Internet_Programiranje/: 2018.html  flight.html  index.html  kredinta.html  make-squares.html  maraton.html  perfect-number.html  test.html  zad1.html
ObjektnoOrientiranaAnaliza&Dizajn/: Untitled Diagram.drawio
Osnovi_Na_Web_Dizajn_Projekt/: .firebaserc  README.md  angular.json  package-lock.json  package.json
Strukturno_Programiranje/labs/labs4/: CMakeLists.txt
labs/labs3/: CMakeLists.txt  igra.c  najbrzo-vreme.c  struja.c
labs/labs6/: CMakeLists.txt
vezbi-kolokvium2/: 1-samoglaski-ednidodrugo-dadoteka.c  1.1-nizi-palindrom-niza-znakovi.c  1.11-nizi-premestuvanje-elementi-levo-desno-prv-element.c  1.12-matrici-stosen-broj.c  1.2-dadoteki-shema-txt.c  1.6-nizi-najmal-element-paren-broj-pati.c  1.8-dadoteki-skrieni-zborovi-2.c  12-pozitiven-broj-rekurzija.c  6-3kecovi-pored-matrica.c  8-dadoteki-receniza-izmegu-2cifri.c  9-niza-celi-broj-rekurzija.c  brojki123-321.c  dadoteka-broevi-najznacajna-cifra.c  dadoteka-podatoci.c  dadoteki-matrici-skrieni-zborovi.c  elka.c  matrici-transofirana-so-minimalna-vrednost.c  prolet-leto.c  promeni-vrednosti-matrica.c  razlika-na-sumi-matrica.c  slednaGolemaBukva.c  stringovi-azbuka-plus-x-nizi.c  test.c  transformirana-matrica.c  validen-broj-pokazuvac.c
(+478 files in other folders)
