cmake_minimum_required(VERSION 3.23)
project(labs3 C)

set(CMAKE_C_STANDARD 11)

add_executable(labs3
        tik-tak.c)
add_executable(labs3_kolega
        kolega.c)
add_executable(labs3_struja
        struja.c)
add_executable(labs3_vreme
        najbrzo-vreme.c)
add_executable(labs3_taxi
        taxi.c)
add_executable(labs3_test
        test.c)
add_executable(labs3_ujp
        ujp.c)
add_executable(labs3_igra
        igra.c)