cmake_minimum_required(VERSION 3.23)
project(labs5 C)

set(CMAKE_C_STANDARD 11)

add_executable(zad1
        zad1.c)

add_executable(zad2
        zad2.c)

add_executable(zad3
        zad3.c)

add_executable(zad4
        zad4.c)

add_executable(zad5
        zad5.c)

add_executable(test
        test.c)