cmake_minimum_required(VERSION 3.23)
project(labs4 C)

set(CMAKE_C_STANDARD 11)

add_executable(labs4
        milan-marko.c)

add_executable(labs4_faktoriel
        faktoriel.c)

add_executable(labs4_delivo-so-3
        delivi-so-3.c)


add_executable(labs4_posledovatelni
        razlika-pomegu-2-posl.c)

add_executable(labs4_opadzacki
        opadzacki.c)

add_executable(labs4_test
        test.c)